--- a/configs/SYNO-Apollolake.conf
+++ b/configs/SYNO-Apollolake.conf
@@ -83,7 +83,7 @@ function SYNOAPOLLOLAKE_MEDIA_CONFIGURE {
 	cd ${TOP_MDB_DIR}/build/${PACKAGE_CODE}
 
 	if [ ! -d media_build ] ; then
-		git clone http://git.linuxtv.org/cgit.cgi/media_build.git
+		git clone https://git.linuxtv.org/media_build.git
 	fi
 
 	if [ -f ${TOP_MDB_DIR}/board/${PACKAGE_NAME}/media_build/config-mycompat.h ] ; then
